Fix z-index issue between Header & ContactSection

--- a/styles/contactsSection.module.css
+++ b/styles/contactsSection.module.css
@@ -2,7 +2,6 @@
   width: 300;
   height: calc(100vh - 60px);
   overflow-y: hidden;
-  z-index: -1;
 
   &:hover {
     overflow-y: auto;
