--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -59,7 +59,6 @@
   border-radius: 4px;
   box-shadow: 0 1px 8px var(--lightgrey3);
   min-width: 200px;
-  z-index: 1;
 }
 
 .dropdownCard {
