--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -7,24 +7,28 @@
   --button-secondary-hover: #f2f2f2;
 
   font-family: var(--font-geist-sans);
-  margin-top: 60;
+  margin-top: 50;
   width: 100vw;
 }
 
 .main {
   display: flex;
+  justify-content: space-between;
   height: 100%;
 }
 
-.flux {
-  width: calc(100vw - 600px);
+.fluxContainer {
   height: calc(100vh - 60px);
-  padding: 0 20px;
+  padding: 10 20px;
   overflow-y: auto;
 
   &::-webkit-scrollbar {
     width: 0;
   }
+}
+
+.flux {
+  width: 600;
 }
 
 /* @media (prefers-color-scheme: dark) {
